--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -6,10 +6,7 @@ on:
 name: nightly
 jobs:
   build:
-    runs-on: ${{matrix.os}}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macOS-latest]
+    runs-on: ubuntu-latest
     env:
       GO_CACHE_NAME: cache-go-modules
       YARN_CACHE_NAME: cache-yarn
@@ -53,32 +50,18 @@ jobs:
       env:
         GITHUB_BUILD_TOKEN: ${{ secrets.BUILD_BOT_PERSONAL_ACCESS_TOKEN }}
       run: |
-        if [ "$RUNNER_OS" == "macOS" ]; then
-          LOCAL_BINARIES_GOOS=darwin make cmd/mccp/mccp
-        elif [ "$RUNNER_OS" == "Linux" ]; then
-          make -j4 GITHUB_BUILD_TOKEN=${GITHUB_BUILD_TOKEN}
-        fi
-        mv cmd/mccp/mccp cmd/mccp/mccp-${{ matrix.os }}-nightly
-    - name: Store mccp binaries
-      uses: actions/upload-artifact@v2
-      with:
-        name: mccp-binaries
-        path: cmd/mccp/mccp-${{ matrix.os }}-nightly
-        retention-days: 1
+          make GITHUB_BUILD_TOKEN=${GITHUB_BUILD_TOKEN}
     - name: Install Helm v3
-      if: ${{ runner.os == 'Linux' }}
       uses: azure/setup-helm@v1
       with:
         version: v3.5.4
     - name: Configure AWS Credentials
-      if: ${{ runner.os == 'Linux' }}
       uses: aws-actions/configure-aws-credentials@v1
       with:
         aws-access-key-id: ${{ secrets.WGE_S3_AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.WGE_S3_AWS_SECRET_ACCESS_KEY }}
         aws-region: eu-central-1
     - name: Publish helm chart to s3
-      if: ${{ runner.os == 'Linux' }}
       run: |
           git fetch --tags --force
           TAG=$(git describe --always --match "v*")
@@ -90,14 +73,12 @@ jobs:
           # Publish the MCCP Helm v3 chart
           ./bin/publish-chart-to-s3.sh $TAG "nightly/charts-v3" ./charts/mccp
     - name: Login to Docker Hub
-      if: ${{ runner.os == 'Linux' }}
       uses: docker/login-action@v1
       with:
         registry: docker.io
         username: ${{ secrets.WGE_DOCKER_IO_USER }}
         password: ${{ secrets.WGE_DOCKER_IO_PASSWORD }}
     - name: Push images to docker registry
-      if: ${{ runner.os == 'Linux' }}
       run: make push
 
   test-eks:
@@ -116,16 +97,15 @@ jobs:
       GITHUB_USER: ${{ secrets.WGE_GITHUB_USER }}
       DOCKER_IO_USER: ${{ secrets.WGE_DOCKER_IO_USER }} 
       DOCKER_IO_PASSWORD: ${{ secrets.WGE_DOCKER_IO_PASSWORD }}
-      MCCP_BIN_PATH: ${{ github.workspace }}/cmd/mccp/mccp-${{ matrix.os }}-nightly
       GITOPS_BIN_PATH: ${{ github.workspace }}/cmd/gitops/gitops-${{ matrix.os_name }}-x86_64
       WKP_BIN_PATH: ${{ github.workspace }}/cmd/wk/wk-v2.5.0-${{ matrix.os_name }}-amd64
       WGE_ACCEPTANCE_EKS_KUBECONFIG: ${{ secrets.WGE_ACCEPTANCE_EKS_KUBECONFIG }}
-      MCCP_EKS_LEAF_KUBECONFIG: '/tmp/mccp-eks-leaf-kubeconfig'
-      MCCP_KIND_WKP_LEAF_KUBECONFIG: '/tmp/mccp-kind-leaf-kubeconfig'
+      EKS_LEAF_KUBECONFIG: '/tmp/eks-leaf-kubeconfig'
+      KIND_WKP_LEAF_KUBECONFIG: '/tmp/wkp-kind-leaf-kubeconfig'
       ACCEPTANCE_TESTS_DATABASE_TYPE: postgres
       MANAGEMENT_CLUSTER_KIND: EKS
       SELENIUM_DEBUG: true
-      MCCP_ACCEPTANCE: true
+      WGE_ACCEPTANCE: true
       ARTEFACTS_BASE_DIR: /tmp/workspace/test/
     steps:
     - id: go-cache-paths
@@ -193,16 +173,11 @@ jobs:
       run: |
         git config --global user.email "test-user@weave.works"
         git config --global user.name "test-user"
-        git config --global url.ssh://git@github.com/.insteadOf https://github.com/
-    - name: Download mccp binaries
-      uses: actions/download-artifact@v2
-      with:
-        name: mccp-binaries
-        path: cmd/mccp
+        git config --global url.ssh://git@github.com/.insteadOf https://github.com/    
     - name: Download gitops binary from GitHub
       run: |
         mkdir -p cmd/gitops/
-        wget https://github.com/weaveworks/weave-gitops/releases/download/v0.3.0/gitops-${{ matrix.os_name }}-x86_64
+        wget https://github.com/weaveworks/weave-gitops/releases/download/v0.3.2-rc/gitops-${{ matrix.os_name }}-x86_64
         mv gitops-${{ matrix.os_name }}-x86_64 $GITOPS_BIN_PATH    
     - name: Download wk binary from s3
       run: |
@@ -210,7 +185,6 @@ jobs:
         curl -o $WKP_BIN_PATH https://s3.amazonaws.com/weaveworks-wkp/wk-v2.5.0-${{ matrix.os_name }}-amd64        
     - name: Change bin permissions
       run: |
-        sudo chmod +x ${{ env.MCCP_BIN_PATH }}
         sudo chmod +x ${{ env.GITOPS_BIN_PATH }}
         sudo chmod +x ${{ env.WKP_BIN_PATH }}  
     - name: Setup selenium server
@@ -240,9 +214,9 @@ jobs:
         kubectl get nodes -A
         kubectl get all --all-namespaces -o wide 
         
-    - name: Install mccp componenets on EKS management cluster
+    - name: Install wego enterprise componenets on EKS management cluster
       run: |
-        export CLUSTER_REPOSITORY=mccp-capi-template-${{ github.run_id }}-$(openssl rand -hex 8)
+        export CLUSTER_REPOSITORY=gitops-capi-template-${{ github.run_id }}-$(openssl rand -hex 8)
         # Set the CLUSTER_REPOSITORY as environment variable for subsequent steps
         echo "CLUSTER_REPOSITORY=$CLUSTER_REPOSITORY" >> $GITHUB_ENV
 
@@ -250,20 +224,20 @@ jobs:
     - name: Setup wkp leaf cluster
       if: ${{ runner.os == 'Linux' }}
       run: |
-        kind create cluster --name my-wkp-leaf-cluster --image=kindest/node:v1.20.7 --config test/utils/data/kind-config.yaml --kubeconfig $MCCP_KIND_WKP_LEAF_KUBECONFIG
-        export KUBECONFIG=$MCCP_KIND_WKP_LEAF_KUBECONFIG
+        kind create cluster --name my-wkp-leaf-cluster --image=kindest/node:v1.20.7 --config test/utils/data/kind-config.yaml --kubeconfig $KIND_WKP_LEAF_KUBECONFIG
+        export KUBECONFIG=$KIND_WKP_LEAF_KUBECONFIG
 
         export CLUSTER_NAME=leaf-${{ github.run_id }}-${{ github.run_number}}-${{ matrix.os }}
         # Set the WKP_CLUSTER_NAME as environment variable for subsequent steps
         echo "WKP_CLUSTER_NAME=$CLUSTER_NAME" >> $GITHUB_ENV
         ./test/utils/scripts/wkp.sh setup $CLUSTER_NAME ${{ github.workspace }}
 
-        # Unset KUBECONFIG to let kubectl point back to the MCCP cluster under test
+        # Unset KUBECONFIG to let kubectl point back to the wego enterprise cluster under test
         unset KUBECONFIG 
     - name: Setup eks leaf cluster 
       run: |
-        # decode EKS kubeconfig and store at path set in MCCP_EKS_LEAF_KUBECONFIG
-        echo $WGE_ACCEPTANCE_EKS_KUBECONFIG | base64 -d > $MCCP_EKS_LEAF_KUBECONFIG
+        # decode EKS kubeconfig and store at path set in EKS_LEAF_KUBECONFIG
+        echo $WGE_ACCEPTANCE_EKS_KUBECONFIG | base64 -d > $EKS_LEAF_KUBECONFIG
     - name: Run acceptance tests
       run: |
         cd test/acceptance/test/
@@ -310,16 +284,15 @@ jobs:
       GITHUB_USER: ${{ secrets.WGE_GITHUB_USER }}
       DOCKER_IO_USER: ${{ secrets.WGE_DOCKER_IO_USER }} 
       DOCKER_IO_PASSWORD: ${{ secrets.WGE_DOCKER_IO_PASSWORD }}
-      MCCP_BIN_PATH: ${{ github.workspace }}/cmd/mccp/mccp-${{ matrix.os }}-nightly
       GITOPS_BIN_PATH: ${{ github.workspace }}/cmd/gitops/gitops-${{ matrix.os_name }}-x86_64
       WKP_BIN_PATH: ${{ github.workspace }}/cmd/wk/wk-v2.5.0-${{ matrix.os_name }}-amd64
       WGE_ACCEPTANCE_GCE_KUBECONFIG: ${{ secrets.WGE_ACCEPTANCE_GCE_KUBECONFIG }}
-      MCCP_GCE_LEAF_KUBECONFIG: '/tmp/mccp-gce-leaf-kubeconfig'
-      MCCP_KIND_WKP_LEAF_KUBECONFIG: '/tmp/mccp-kind-leaf-kubeconfig'
+      GCE_LEAF_KUBECONFIG: '/tmp/gce-leaf-kubeconfig'
+      KIND_WKP_LEAF_KUBECONFIG: '/tmp/wkp-kind-leaf-kubeconfig'
       ACCEPTANCE_TESTS_DATABASE_TYPE: postgres
       MANAGEMENT_CLUSTER_KIND: GKE
       SELENIUM_DEBUG: true
-      MCCP_ACCEPTANCE: true
+      WGE_ACCEPTANCE: true
       ARTEFACTS_BASE_DIR: /tmp/workspace/test/
     steps:
     - id: go-cache-paths
@@ -377,16 +350,11 @@ jobs:
       run: |
         git config --global user.email "test-user@weave.works"
         git config --global user.name "test-user"
-        git config --global url.ssh://git@github.com/.insteadOf https://github.com/
-    - name: Download mccp binaries
-      uses: actions/download-artifact@v2
-      with:
-        name: mccp-binaries
-        path: cmd/mccp
+        git config --global url.ssh://git@github.com/.insteadOf https://github.com/    
     - name: Download gitops binary from GitHub
       run: |
         mkdir -p cmd/gitops/
-        wget https://github.com/weaveworks/weave-gitops/releases/download/v0.3.0/gitops-${{ matrix.os_name }}-x86_64
+        wget https://github.com/weaveworks/weave-gitops/releases/download/v0.3.2-rc/gitops-${{ matrix.os_name }}-x86_64
         mv gitops-${{ matrix.os_name }}-x86_64 $GITOPS_BIN_PATH    
     - name: Download wk binary from s3
       run: |
@@ -394,7 +362,6 @@ jobs:
         curl -o $WKP_BIN_PATH https://s3.amazonaws.com/weaveworks-wkp/wk-v2.5.0-${{ matrix.os_name }}-amd64        
     - name: Change bin permissions
       run: |
-        sudo chmod +x ${{ env.MCCP_BIN_PATH }}
         sudo chmod +x ${{ env.GITOPS_BIN_PATH }}
         sudo chmod +x ${{ env.WKP_BIN_PATH }}  
     - name: Setup selenium server
@@ -423,9 +390,9 @@ jobs:
         ls -la $HOME/.kube
         kubectl get nodes -A
         kubectl get all --all-namespaces -o wide        
-    - name: Install mccp componenets on GKE management cluster
+    - name: Install wego enterprise componenets on GKE management cluster
       run: |
-        export CLUSTER_REPOSITORY=mccp-capi-template-${{ github.run_id }}-$(openssl rand -hex 8)
+        export CLUSTER_REPOSITORY=gitops-capi-template-${{ github.run_id }}-$(openssl rand -hex 8)
         # Set the CLUSTER_REPOSITORY as environment variable for subsequent steps
         echo "CLUSTER_REPOSITORY=$CLUSTER_REPOSITORY" >> $GITHUB_ENV
 
@@ -433,20 +400,20 @@ jobs:
     - name: Setup wkp leaf cluster
       if: ${{ runner.os == 'Linux' }}
       run: |
-        kind create cluster --name my-wkp-leaf-cluster --image=kindest/node:v1.20.7 --config test/utils/data/kind-config.yaml --kubeconfig $MCCP_KIND_WKP_LEAF_KUBECONFIG
-        export KUBECONFIG=$MCCP_KIND_WKP_LEAF_KUBECONFIG
+        kind create cluster --name my-wkp-leaf-cluster --image=kindest/node:v1.20.7 --config test/utils/data/kind-config.yaml --kubeconfig $KIND_WKP_LEAF_KUBECONFIG
+        export KUBECONFIG=$KIND_WKP_LEAF_KUBECONFIG
 
         export CLUSTER_NAME=leaf-${{ github.run_id }}-${{ github.run_number}}-${{ matrix.os }}
         # Set the WKP_CLUSTER_NAME as environment variable for subsequent steps
         echo "WKP_CLUSTER_NAME=$CLUSTER_NAME" >> $GITHUB_ENV
         ./test/utils/scripts/wkp.sh setup $CLUSTER_NAME ${{ github.workspace }}
 
-        # Unset KUBECONFIG to let kubectl point back to the MCCP cluster under test
+        # Unset KUBECONFIG to let kubectl point back to the wego enterprise cluster under test
         unset KUBECONFIG 
     - name: Setup gce leaf cluster 
       run: |
-        # decode GCE kubeconfig and store at path set in MCCP_GKE_LEAF_KUBECONFIG
-        echo $WGE_ACCEPTANCE_GCE_KUBECONFIG | base64 -d > $MCCP_GCE_LEAF_KUBECONFIG
+        # decode GCE kubeconfig and store at path set in GKE_LEAF_KUBECONFIG
+        echo $WGE_ACCEPTANCE_GCE_KUBECONFIG | base64 -d > $GCE_LEAF_KUBECONFIG
     - name: Run acceptance tests
       run: |
         cd test/acceptance/test/
@@ -477,38 +444,3 @@ jobs:
         path: ${{ env.ARTEFACTS_BASE_DIR }}
         retention-days: 1  
   
-  publish-binaries:
-    runs-on: ${{matrix.os}}
-    strategy:
-      matrix:
-        include:
-          - os: ubuntu-latest
-            os_name: linux
-          - os: macOS-latest
-            os_name: darwin
-    needs: [test-eks, test-gke]
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
-    - name: Download mccp binaries
-      uses: actions/download-artifact@v2
-      with:
-        name: mccp-binaries
-        path: cmd/mccp
-    - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.WGE_S3_AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.WGE_S3_AWS_SECRET_ACCESS_KEY }}
-        aws-region: eu-central-1
-    - name: Get current date
-      id: date
-      run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
-    - name: Publish mccp to s3
-      run: |
-        git fetch --tags --force
-        TAG=$(git describe --always --match "v*")
-        aws s3 cp cmd/mccp/mccp-${{ matrix.os }}-nightly s3://weaveworks-wkp/nightly/mccp-${TAG}-${{ matrix.os_name }}-amd64
-
