--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -160,7 +160,7 @@ jobs:
         make update-mccp-chart-values CHART_VALUES_PATH=$CHART_VALUES_PATH
 
         # Publish the MCCP Helm v3 chart
-        ./bin/publish-chart-to-s3.sh $TAG "charts-v3" ./charts/mccp
+        ./bin/publish-chart-to-s3.sh $TAG "charts-v3" ./charts/mccp    
     - name: Login to Docker Hub
       uses: docker/login-action@v1
       with:
@@ -297,8 +297,6 @@ jobs:
       GITHUB_TOKEN: ${{ secrets.WGE_GITHUB_TOKEN }}
       GITHUB_ORG: ${{ secrets.WGE_GITHUB_ORG }}
       GITHUB_USER: ${{ secrets.WGE_GITHUB_USER }}
-      DOCKER_IO_USER: ${{ secrets.WGE_DOCKER_IO_USER }} 
-      DOCKER_IO_PASSWORD: ${{ secrets.WGE_DOCKER_IO_PASSWORD }}
       GITOPS_BIN_PATH: ${{ github.workspace }}/cmd/gitops/gitops-linux-x86_64
       SELENIUM_DEBUG: true
       ACCEPTANCE_TESTS_DATABASE_TYPE: sqlite
@@ -350,13 +348,11 @@ jobs:
         git config --global user.email "test-user@weave.works"
         git config --global user.name "test-user"
         git config --global url.ssh://git@github.com/.insteadOf https://github.com/
-    - name: Download gitops binary from GitHub
-      uses: Legion2/download-release-action@v2.1.0
-      with:
-        repository: weaveworks/weave-gitops
-        tag: 'v0.3.2-rc'
-        path: cmd/gitops/
-        file: gitops-linux-x86_64
+    - name: Download gitops binary from s3
+      run: |
+        mkdir -p cmd/gitops/
+        wget https://weave-gitops.s3.us-east-2.amazonaws.com/gitops-ubuntu-latest
+        mv gitops-ubuntu-latest $GITOPS_BIN_PATH
     - name: Change bin permissions
       run: |
         sudo chmod +x ${{ env.GITOPS_BIN_PATH }}
@@ -404,8 +400,6 @@ jobs:
       GITHUB_TOKEN: ${{ secrets.WGE_GITHUB_TOKEN }}
       GITHUB_ORG: ${{ secrets.WGE_GITHUB_ORG }}
       GITHUB_USER: ${{ secrets.WGE_GITHUB_USER }}
-      DOCKER_IO_USER: ${{ secrets.WGE_DOCKER_IO_USER }} 
-      DOCKER_IO_PASSWORD: ${{ secrets.WGE_DOCKER_IO_PASSWORD }}
       GITOPS_BIN_PATH: ${{ github.workspace }}/cmd/gitops/gitops-linux-x86_64
       WKP_BIN_PATH: ${{ github.workspace }}/cmd/wk/wk-v2.5.0-linux-amd64
       SELENIUM_DEBUG: true
@@ -459,13 +453,11 @@ jobs:
         git config --global user.email "test-user@weave.works"
         git config --global user.name "test-user"
         git config --global url.ssh://git@github.com/.insteadOf https://github.com/
-    - name: Download gitops binary from GitHub
-      uses: Legion2/download-release-action@v2.1.0
-      with:
-        repository: weaveworks/weave-gitops
-        tag: 'v0.3.2-rc'
-        path: cmd/gitops/
-        file: gitops-linux-x86_64
+    - name: Download gitops binary from s3
+      run: |
+        mkdir -p cmd/gitops/
+        wget https://weave-gitops.s3.us-east-2.amazonaws.com/gitops-ubuntu-latest
+        mv gitops-ubuntu-latest $GITOPS_BIN_PATH
     - name: Change bin permissions
       run: |
         sudo chmod +x ${{ env.GITOPS_BIN_PATH }}
