Push profile to repo

--- a/cmd/clusters-service/pkg/charts/testdata/parsing/profile.yaml
+++ b/cmd/clusters-service/pkg/charts/testdata/parsing/profile.yaml
@@ -9,6 +9,8 @@ spec:
     spec:
       chart: podinfo
       sourceRef:
+        apiVersion: source.toolkit.fluxcd.io/v1beta1
+        kind: HelmRepository
         name: testing
         namespace: test-ns
       version: 0.0.2
