--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -163,6 +163,7 @@ jobs:
       DOCKER_IO_USER: ${{ secrets.WGE_DOCKER_IO_USER }} 
       DOCKER_IO_PASSWORD: ${{ secrets.WGE_DOCKER_IO_PASSWORD }}
       GITOPS_BIN_PATH: ${{ github.workspace }}/cmd/gitops/gitops-${{ matrix.os_name }}-x86_64
+      PCTL_BIN_PATH: ${{ github.workspace }}/cmd/pctl/pctl_${{ matrix.os_name }}_amd64
       WKP_BIN_PATH: ${{ github.workspace }}/cmd/wk/wk-v2.5.0-${{ matrix.os_name }}-amd64
       SELENIUM_DEBUG: true
       ACCEPTANCE_TESTS_DATABASE_TYPE: sqlite
@@ -227,6 +228,12 @@ jobs:
         mkdir -p cmd/gitops/
         wget https://weave-gitops.s3.us-east-2.amazonaws.com/gitops-${{ matrix.os }}
         mv gitops-${{ matrix.os }} $GITOPS_BIN_PATH
+    - name: Download pctl binary from GH
+      run: |
+        mkdir -p cmd/pctl/
+        wget https://github.com/weaveworks/pctl/releases/download/v0.11.0/pctl_${{ matrix.os_name }}_amd64.tar.gz
+        tar -xf pctl_${{ matrix.os_name }}_amd64.tar.gz
+        mv pctl $PCTL_BIN_PATH
     - name: Download wk binary from s3
       run: |
         mkdir -p cmd/wk/
@@ -258,6 +265,7 @@ jobs:
 
         ./test/utils/scripts/wego-enterprise.sh setup ${{ github.workspace }}
     - name: Setup wkp leaf cluster
+      if: ${{ runner.os == 'Linux' }}
       run: |
         kind create cluster --name my-wkp-leaf-cluster --image=kindest/node:v1.20.7 --config test/utils/data/kind-config.yaml --kubeconfig $KIND_WKP_LEAF_KUBECONFIG
         export KUBECONFIG=$KIND_WKP_LEAF_KUBECONFIG
@@ -272,12 +280,19 @@ jobs:
     - name: Run acceptance tests
       run: |
         cd test/acceptance/test/
-        go test -ginkgo.skip=@gce -ginkgo.skip=@eks -ginkgo.v -v --timeout=99999s
+        if [ "$RUNNER_OS" == "macOS" ]; then
+          go test -ginkgo.skip=@gce -ginkgo.skip=@eks -ginkgo.skip=@wkp -ginkgo.v -v --timeout=99999s
+        else
+          go test -ginkgo.skip=@gce -ginkgo.skip=@eks -ginkgo.v -v --timeout=99999s
+        fi
     - name: Delete WKP repository
       if: ${{ always() }}
       continue-on-error: true
       run: |
-        hub delete -y $GITHUB_ORG/$WKP_CLUSTER_NAME
+        # We are not running WKP leaf cluster connect tests for macOS, hence no WKP repository exists for macOS job
+        if [ "$RUNNER_OS" == "Linux" ]; then
+          hub delete -y $GITHUB_ORG/$WKP_CLUSTER_NAME
+        fi
     - name: Store acceptance test results
       if: ${{ always() }}
       continue-on-error: true
@@ -296,7 +311,7 @@ jobs:
   #   - name: Install Go
   #     uses: actions/setup-go@v2
   #     with:
-  #       go-version: 1.16.x
+  #       go-version: 1.17.x
   #   - name: Checkout code
   #     uses: actions/checkout@v2
   #   - name: Install testspace client
