--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -98,6 +98,7 @@ jobs:
       DOCKER_IO_USER: ${{ secrets.WGE_DOCKER_IO_USER }} 
       DOCKER_IO_PASSWORD: ${{ secrets.WGE_DOCKER_IO_PASSWORD }}
       GITOPS_BIN_PATH: ${{ github.workspace }}/cmd/gitops/gitops-${{ matrix.os_name }}-x86_64
+      PCTL_BIN_PATH: ${{ github.workspace }}/cmd/pctl/pctl_${{ matrix.os_name }}_amd64
       WKP_BIN_PATH: ${{ github.workspace }}/cmd/wk/wk-v2.5.0-${{ matrix.os_name }}-amd64
       WGE_ACCEPTANCE_EKS_KUBECONFIG: ${{ secrets.WGE_ACCEPTANCE_EKS_KUBECONFIG }}
       EKS_LEAF_KUBECONFIG: '/tmp/eks-leaf-kubeconfig'
@@ -180,6 +181,12 @@ jobs:
         
         wget https://weave-gitops.s3.us-east-2.amazonaws.com/gitops-${{ matrix.os }}
         mv gitops-${{ matrix.os }} $GITOPS_BIN_PATH 
+    - name: Download pctl binary from GH
+      run: |
+        mkdir -p cmd/pctl/
+        wget https://github.com/weaveworks/pctl/releases/download/v0.11.0/pctl_${{ matrix.os_name }}_amd64.tar.gz
+        tar -xf pctl_${{ matrix.os_name }}_amd64.tar.gz
+        mv pctl $PCTL_BIN_PATH
     - name: Download wk binary from s3
       run: |
         mkdir -p cmd/wk/
@@ -286,6 +293,7 @@ jobs:
       DOCKER_IO_USER: ${{ secrets.WGE_DOCKER_IO_USER }} 
       DOCKER_IO_PASSWORD: ${{ secrets.WGE_DOCKER_IO_PASSWORD }}
       GITOPS_BIN_PATH: ${{ github.workspace }}/cmd/gitops/gitops-${{ matrix.os_name }}-x86_64
+      PCTL_BIN_PATH: ${{ github.workspace }}/cmd/pctl/pctl_${{ matrix.os_name }}_amd64
       WKP_BIN_PATH: ${{ github.workspace }}/cmd/wk/wk-v2.5.0-${{ matrix.os_name }}-amd64
       WGE_ACCEPTANCE_GCE_KUBECONFIG: ${{ secrets.WGE_ACCEPTANCE_GCE_KUBECONFIG }}
       GCE_LEAF_KUBECONFIG: '/tmp/gce-leaf-kubeconfig'
@@ -357,6 +365,12 @@ jobs:
         mkdir -p cmd/gitops/
         wget https://weave-gitops.s3.us-east-2.amazonaws.com/gitops-${{ matrix.os }}
         mv gitops-${{ matrix.os }} $GITOPS_BIN_PATH 
+    - name: Download pctl binary from GH
+      run: |
+        mkdir -p cmd/pctl/
+        wget https://github.com/weaveworks/pctl/releases/download/v0.11.0/pctl_${{ matrix.os_name }}_amd64.tar.gz
+        tar -xf pctl_${{ matrix.os_name }}_amd64.tar.gz
+        mv pctl $PCTL_BIN_PATH
     - name: Download wk binary from s3
       run: |
         mkdir -p cmd/wk/
