--- a/charts/mccp/values.yaml
+++ b/charts/mccp/values.yaml
@@ -31,6 +31,9 @@ dbConfig:
   postgresConfig:
     databaseName: postgres
 
+fluxCli:
+  image: ghcr.io/fluxcd/flux-cli:0.19.1
+  srcPath: /usr/local/bin/flux
 
 config:
   git:
