--- a/charts/mccp/values.yaml
+++ b/charts/mccp/values.yaml
@@ -33,7 +33,7 @@ dbConfig:
 
 fluxCli:
   image: ghcr.io/fluxcd/flux-cli:0.19.1
-  srcPath: /usr/local/bin/flux
+  binPath: /usr/local/bin/flux
 
 config:
   git:
