Disable prune if object is not `Cluster` (#210)
* Add DisablePrune() function

* Add test

* Add DisablePrune() to Create PR

* Add ability to disable prune injection

* Fix yaml value

* Use enabled value instead of true

* Comment tests

* Add enable prune test

* Add test to TestRenderTemplate

* Append prune of annotations already exist

* Remove deep copying

* Initialize ann map if it's nil

* Add annotations to regex in acceptance tests

* Rmove annotations

* Add annotations to failing tests

* Set INJECT_PRUNE_ANNOTATION to enabled

* Switch prune to be enabled by default

* more disabling vs enabling

* Fix unit tests

* Fix more unit tests

Co-authored-by: Simon Howe <footless@gmail.com>

--- a/charts/mccp/values.yaml
+++ b/charts/mccp/values.yaml
@@ -39,6 +39,7 @@ config:
   capi:
     templates:
       namespace: default
+      injectPruneAnnotation: enabled
     clusters:
       namespace: default
     repositoryURL: ''
