Upgrade WG to 0.3.3 (#234)
* Up to 0.3.3

* Provide flux bin

* binpath

* v for version

* fix up test

--- a/charts/mccp/values.yaml
+++ b/charts/mccp/values.yaml
@@ -31,6 +31,9 @@ dbConfig:
   postgresConfig:
     databaseName: postgres
 
+fluxCli:
+  image: ghcr.io/fluxcd/flux-cli:v0.19.1
+  binPath: /usr/local/bin/flux
 
 config:
   git:
