--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -112,6 +112,8 @@ jobs:
     - uses: satackey/action-docker-layer-caching@v0.0.11
       # Ignore the failure of a step and avoid terminating the job.
       continue-on-error: true
+      with:
+        key: docker-cache-clusters-service-{hash}
     - name: build
       env:
         GITHUB_BUILD_TOKEN: ${{ secrets.BUILD_BOT_PERSONAL_ACCESS_TOKEN }}
@@ -144,6 +146,8 @@ jobs:
     - uses: satackey/action-docker-layer-caching@v0.0.11
       # Ignore the failure of a step and avoid terminating the job.
       continue-on-error: true
+      with:
+        key: docker-cache-event-writer-{hash}
     - name: build
       env:
         GITHUB_BUILD_TOKEN: ${{ secrets.BUILD_BOT_PERSONAL_ACCESS_TOKEN }}
