--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -114,6 +114,8 @@ jobs:
       continue-on-error: true
       with:
         key: docker-cache-clusters-service-{hash}
+        restore-keys: |
+          docker-cache-clusters-service-
     - name: build
       env:
         GITHUB_BUILD_TOKEN: ${{ secrets.BUILD_BOT_PERSONAL_ACCESS_TOKEN }}
@@ -148,6 +150,8 @@ jobs:
       continue-on-error: true
       with:
         key: docker-cache-event-writer-{hash}
+        restore-keys: |
+          docker-cache-event-writer-
     - name: build
       env:
         GITHUB_BUILD_TOKEN: ${{ secrets.BUILD_BOT_PERSONAL_ACCESS_TOKEN }}
