--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -120,7 +120,7 @@ jobs:
       env:
         GITHUB_BUILD_TOKEN: ${{ secrets.BUILD_BOT_PERSONAL_ACCESS_TOKEN }}
       run: |
-        make GITHUB_BUILD_TOKEN=${GITHUB_BUILD_TOKEN} cmd/event-writer/.uptodate
+        make GITHUB_BUILD_TOKEN=${GITHUB_BUILD_TOKEN} cmd/clusters-service/.uptodate
     - name: Login to Docker Hub
       uses: docker/login-action@v1
       with:
@@ -128,7 +128,8 @@ jobs:
         username: ${{ secrets.WGE_DOCKER_IO_USER }}
         password: ${{ secrets.WGE_DOCKER_IO_PASSWORD }}
     - name: Push images to docker registry
-      run: make push
+      run: |
+        docker push docker.io/weaveworks/weave-gitops-enterprise-clusters-service:$(./tools/image-tag)
 
   build-event-writer:
     runs-on: ubuntu-latest
@@ -164,7 +165,8 @@ jobs:
         username: ${{ secrets.WGE_DOCKER_IO_USER }}
         password: ${{ secrets.WGE_DOCKER_IO_PASSWORD }}
     - name: Push images to docker registry
-      run: make push
+      run: |
+        docker push docker.io/weaveworks/weave-gitops-enterprise-event-writer:$(./tools/image-tag)
 
   build:
     runs-on: ubuntu-latest
