--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -157,7 +157,7 @@ jobs:
       env:
         GITHUB_BUILD_TOKEN: ${{ secrets.BUILD_BOT_PERSONAL_ACCESS_TOKEN }}
       run: |
-        make GITHUB_BUILD_TOKEN=${GITHUB_BUILD_TOKEN} cmd/clusters-service/.uptodate
+        make GITHUB_BUILD_TOKEN=${GITHUB_BUILD_TOKEN} cmd/event-writer/.uptodate
     - name: Login to Docker Hub
       uses: docker/login-action@v1
       with:
