--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -34,9 +34,9 @@ jobs:
         path: |
           ${{ steps.go-cache-paths.outputs.go-build }}
           ${{ steps.go-cache-paths.outputs.go-mod }}
-        key: ${{ runner.os }}-${{ github.job_id }}-${{ env.GO_CACHE_NAME }}-${{ hashFiles('**/go.sum') }}
+        key: ${{ runner.os }}-${{ github.job }}-${{ env.GO_CACHE_NAME }}-${{ hashFiles('**/go.sum') }}
         restore-keys: |
-          ${{ runner.os }}-${{ github.job_id }}-${{ env.GO_CACHE_NAME }}-
+          ${{ runner.os }}-${{ github.job }}-${{ env.GO_CACHE_NAME }}-
     - name: Lint
       run: |
         make lint
@@ -68,9 +68,9 @@ jobs:
         path: |
           ${{ steps.go-cache-paths.outputs.go-build }}
           ${{ steps.go-cache-paths.outputs.go-mod }}
-        key: ${{ runner.os }}-${{ github.job_id }}-${{ env.GO_CACHE_NAME }}-${{ hashFiles('**/go.sum') }}
+        key: ${{ runner.os }}-${{ github.job }}-${{ env.GO_CACHE_NAME }}-${{ hashFiles('**/go.sum') }}
         restore-keys: |
-          ${{ runner.os }}-${{ github.job_id }}-${{ env.GO_CACHE_NAME }}-
+          ${{ runner.os }}-${{ github.job }}-${{ env.GO_CACHE_NAME }}-
     - name: Install goveralls
       env:
         GO111MODULE: off
@@ -135,9 +135,9 @@ jobs:
         path: |
           ${{ steps.cache-paths.outputs.go-build }}
           ${{ steps.cache-paths.outputs.go-mod }}
-        key: ${{ runner.os }}-${{ github.job_id }}-${{ env.GO_CACHE_NAME }}-${{ hashFiles('**/go.sum') }}
+        key: ${{ runner.os }}-${{ github.job }}-${{ env.GO_CACHE_NAME }}-${{ hashFiles('**/go.sum') }}
         restore-keys: |
-          ${{ runner.os }}-${{ github.job_id }}-${{ env.GO_CACHE_NAME }}-
+          ${{ runner.os }}-${{ github.job }}-${{ env.GO_CACHE_NAME }}-
     - name: Yarn Cache
       uses: actions/cache@v2
       with:
@@ -184,9 +184,9 @@ jobs:
         path: |
           ${{ steps.cache-paths.outputs.go-build }}
           ${{ steps.cache-paths.outputs.go-mod }}
-        key: ${{ runner.os }}-${{ github.job_id }}-${{ env.GO_CACHE_NAME }}-${{ hashFiles('**/go.sum') }}
+        key: ${{ runner.os }}-${{ github.job }}-${{ env.GO_CACHE_NAME }}-${{ hashFiles('**/go.sum') }}
         restore-keys: |
-          ${{ runner.os }}-${{ github.job_id }}-${{ env.GO_CACHE_NAME }}-
+          ${{ runner.os }}-${{ github.job }}-${{ env.GO_CACHE_NAME }}-
     - name: Yarn Cache
       uses: actions/cache@v2
       with:
